One Page , Admin

--- a/templates/Base.html
+++ b/templates/Base.html
@@ -28,7 +28,9 @@
     <link rel="stylesheet" href="{% static 'Website/css/flaticon.css' %}">
     <link rel="stylesheet" href="{% static 'Website/css/icomoon.css' %}">
     <link rel="stylesheet" href="{% static 'Website/css/style.css' %}">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/react-toastify@4.5.1/dist/ReactToastify.min.css">
     <link href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet" integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN" crossorigin="anonymous">
+    
   </head>
   <body>
     <style>
@@ -166,6 +168,7 @@
   <script src="{% static 'Website/js/bootstrap-datepicker.js' %}"></script>
   <script src="{% static 'Website/js/scrollax.min.js' %}"></script>
   <script src="{% static 'Website/js/main.js' %}"></script>
+  
   <script src="https://cdnjs.cloudflare.com/ajax/libs/axios/0.19.0/axios.js" integrity="sha256-XmdRbTre/3RulhYk/cOBUMpYlaAp2Rpo/s556u0OIKk=" crossorigin="anonymous"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/babel-standalone/6.26.0/babel.min.js" integrity="sha256-FiZMk1zgTeujzf/+vomWZGZ9r00+xnGvOgXoj0Jo1jA=" crossorigin="anonymous"></script>
   <script crossorigin src="https://unpkg.com/react@16/umd/react.production.min.js"></script>
