--- a/templates/Accounts/profile.html
+++ b/templates/Accounts/profile.html
@@ -9,6 +9,10 @@
 {% endblock %}
 
 {% block react_script %}
+  <script src='{% static "components/lib/HeroImageUpdate.js" %}' type='text/babel'></script>
+  <script src='{% static "components/lib/HeroImageCreate.js" %}' type='text/babel'></script>
+  <script src='{% static "components/lib/HeroImageEdit.js" %}' type='text/babel'></script>
+  <script src='{% static "components/lib/BrandEditForm.js" %}' type='text/babel'></script>
   <script src='{% static "components/Website.js" %}' type='text/babel'></script>
   <script type='text/babel'>
     
@@ -109,7 +113,7 @@
                 typeof(master.id) !== 'undefined'
                 && <div>
                       <div className='row'>
-                        <div className='col-lg-4'>
+                        <div className='col-lg-3'>
                           <img src={master.display_image} alt={master.username} style={display_image}/>
                           <h3 style={fullName}><i className="fa fa-id-card" aria-hidden="true"></i> {master.full_name}</h3>
                           <h4 className='badge-success' style={adminBadge}><i className="fa fa-user-secret" aria-hidden="true"></i> Admin User</h4>
@@ -121,7 +125,7 @@
                         
                         
                         </div>
-                        <div className='col-lg-8'>
+                        <div className='col-lg-9'>
                             <ul class="nav nav-pills mb-3" id="pills-tab" role="tablist">
                                 <li class="nav-item">
                                   <a class="nav-link active" id="pills-home-tab" data-toggle="pill" href="#pills-website" role="tab" aria-controls="pills-website" aria-selected="true"><i className="fa fa-eye" aria-hidden="true"></i> Website</a>
